    This means that if you had 3 $n bomb uses, you will now have 8 instead of 5.
- Fixed a typo with the $slap command.
- Fixed some grammatical errors in the DM that users get when they $redeem a supporter key.
- The "I confirm" message for the NSFW age verification no longer has a length of time in which you must verify. (Was 20 seconds)

Version 1.28

- $level command deleted. This command has been merged into $exp.
- $exp now displays how much EXP you need to reach the next level, and an approximate time frame to reach that goal.
- $weekly will now have comma seperated numbers.
- $quickdraw [$qd] command added! A new currency game that you can play with Kaguya.
    - You and Kaguya will pull out your pistols and fire at each other as fast as you can!
    - All times are recorded. Whoever is fastest wins!
    - You may bet up to 25,000 points (unlimited for supporters)
    - If you win, you will be rewarded 1.8x your bet.
        - If you win with a critical hit (8% chance), you will be awarded ~4.05x your bet.
    - There is no bad luck prevention with this game.
- More stuff is now logged in the console.
- Ratelimit adjusted to 3 commands every 3.9 seconds (was 4.25)
- Time to reset ratelimit strikes reduced from 30 days to 14 days without hitting the ratelimit.
- Kaguya will now restart herself if the total guild count is lower than expected.
- Cleaned up the logging that occurs on startup.
- $changelog command added. View all of the new features at any time!
- Most command errors now return a red colored embed (was pink).
- $voteclaim now has an alias of $vc

Version 1.27.1

- $cooldowns added to the $help command list.
- Cooldowns will now only show your "NSFW" cooldown if you have previously verified that you want to see NSFW content.

Version 1.27

- Updated the message that owners see when they add Kaguya to their server.
- Fixed a bug where the resources folder was being backed up too frequently.