@@ -1,5 +1,5 @@
 {
   "WELCOME_&NAME_&VERSION": "Hello, {0}. Welcome to Kaguya! {1}",
-  "VERSION": "Version 1.28",
-  "OLDVERSION": "Version 1.27.1"
+  "VERSION": "Version 1.29",
+  "OLDVERSION": "Version 1.28"
 }
